manifests/db-net-policy.yml
## network policy to limit database access from apps namespace only 

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apps-to-db
  namespace: db
spec:
  podSelector: {}  # Applies to all pods in the 'db' namespace
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apps
      ports:
        - protocol: TCP
          port: 5432
